# extit

./: CMakeLists.txt  LICENSE-examples.txt  LICENSE-samples.txt  LICENSE.txt  README.txt
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
docs/apimeta/: extit.json  extit_container-impl.json  extit_container-stdimpl.json  extit_container.json  extit_container_get_function.json  extit_container_get_interface.json  extit_container_get_symbol.json  extit_container_log.json  extit_container_query_interface.json  extit_module_bind.json  extit_module_create_plugin.json  extit_module_get_abi_version.json  extit_module_get_effective_abi_version.json  extit_module_get_flags.json  extit_module_get_function.json  extit_module_get_id.json  extit_module_get_id_version.json  extit_module_get_name.json  extit_module_get_symbol.json  extit_module_get_version.json  extit_module_load.json  extit_module_load_wc.json  extit_module_release.json  extit_module_scan.json  extit_module_scan_wc.json  extit_module_set_flags.json  extit_plugin_destroy.json  extit_plugin_get_context.json  extit_plugin_get_flags.json  extit_plugin_get_interface.json  extit_plugin_get_module.json  extit_plugin_query_interface.json  extit_plugin_set_flags.json  extit_pmodule-impl.json  extit_pmodule.json  extit_refcount.json  extit_refcount_add.json  extit_refcount_release.json  iv.json  iv_map.json  (+14 more)
docs/html/: extit.html  extit_container-impl.html  extit_container-stdimpl.html  extit_container.html  extit_module.html  extit_plugin.html  extit_pmodule-impl.html  extit_pmodule.html  extit_refcount.html  iv.html  iv_map.html  iv_matches.html  iv_repository.html  iv_util.html  style.css
examples/multiver/: multiver_plugin.c  multiver_server.c  persistence.h  persistence_impl.c
examples/scan/: recipe.h  recipe_pie.c  recipe_server.c  recipe_tea.c
examples/simple/: simple_plugin.c  simple_server.c
examples/stdif_allocator/: plugin.c  server.c
examples/stdif_configurable/: client.c  scan_service.h
examples/stdif_disposable/: client.c  item.c  item.h  itemsource.c  itemsource.h
examples/stdif_messaging/: alarm.h  demo.c
examples/stdif_referenced/: client.c  myobj.h  provider.c  provider.h  worklist.c  worklist.h
examples/stdif_resolvable/: client.c  myobj.c  myobj_client.c  myobj_priv.h
iv/: CMakeLists.txt  LICENSE-tests.txt  LICENSE.txt  README.txt
iv/docs/apimeta/: iv.json  iv_idmap.json  iv_map.json  iv_repository.json  iv_util.json
iv/docs/html/: iv_idmap.html  iv_map.html
iv/examples/iv_repository/: repository.c
iv/src/include/iv/: idmap.h  map.h  version.h
iv/src/repository/: cleanup.c  create.c  destroy.c  get.c  internal.h  query.c  remove.c  set.c
iv/src/util/: keymap.c  matches.c
iv/tests/iv_idmap/: test_iv_idmap.c
iv/tests/iv_map/: test_iv_map.c
sample/if_allocator/: plugin.c  server.c
sample/if_configurable/: client.c  scan_service.c  scan_service.h
sample/if_configurable_proplist/: dump_props.c
sample/if_disposable/: item.c  item.h
sample/if_messaging/: demo.c
sample/if_refcount/: client.c  myobj.h  provider.c  provider.h  worklist.c  worklist.h
sample/if_referenced/: client.c  provider.c  provider.h
sample/if_resolvable/: client.c  myobj.c  myobj_client.c  myobj_priv.h
sample/ir/: repository.c
sample/iv_repository/: repository.c
sample/multiver/: multiver_plugin.c  multiver_server.c  persistence.h  persistence_impl.c  persistence_impl.h
sample/scan/: recipe.h  recipe_pie.c  recipe_server.c  recipe_tacos.c  recipe_tea.c
sample/simple/: simple_plugin.c  simple_server.c
sample/stdif_allocator/: plugin.c  server.c
sample/stdif_configurable/: client.c  scan_service.c  scan_service.h
sample/stdif_configurable_proplist/: dump_props.c
sample/stdif_disposable/: client.c  itemsource.c  itemsource.h
sample/stdif_messaging/: alarm.h  demo.c
sample/stdif_referenced/: client.c  myobj.h  provider.c  provider.h  worklist.c  worklist.h
sample/stdif_resolvable/: client.c  myobj.c  myobj.h  myobj_client.c  myobj_priv.h
src/container/: container_common.c  container_defaults.c  container_dl.c  container_dlopen.c  container_impl.h  container_win32.c  module_bind.c  module_createPlugin.c  module_getAPIVersion.c  module_getEffectiveAPIVersion.c  module_getFlags.c  module_getId.c  module_getVersion.c  module_unload.c  plugin_activate.c  plugin_deactivate.c  plugin_getContext.c  plugin_getFlags.c  plugin_getInterface.c  plugin_setFlags.c
src/container/dl/: container_defaults.c  module_defaults.c  module_getFunction.c  module_getSymbol.c  module_load.c
src/container/win32/: module_getFunction.c  module_load.c  module_release.c
src/extit/container/: Container.cc  ContainerImpl.cc  ContainerImpl_1_0.cc  Container_1_0.cc  container_defaults.c  container_get_function.c  container_get_interface.c  container_get_symbol.c  container_impl.h  container_log.c  container_query_interface.c  get_function.c  get_interface.c  get_symbol.c  get_version.c  log.c  module_bind.c  module_createPlugin.c  module_create_plugin.c  module_getIdVersion.c  module_getName.c  module_get_abi_version.c  module_get_api_version.c  module_get_effective_abi_version.c  module_get_effective_api_version.c  module_get_flags.c  module_get_id.c  module_get_id_version.c  module_get_name.c  module_get_version.c  module_setFlags.c  module_set_flags.c  module_unload.c  plugin_activate.c  plugin_deactivate.c  plugin_destroy.c  plugin_getModule.c  plugin_get_context.c  plugin_get_flags.c  plugin_get_interface.c  (+7 more)
src/extit/container_stdimpl/: container_defaults.c  get_interface.c  log.c  ops.c  query_interface.c
src/extit/if/: disposable.c  messaging.c  refcount.c  resolvable.c
src/if/: disposable.c
src/iface/: disposable.c  refcount.c
src/ir/: ir.c
src/iv/: idmap.c  map.c  repository.c  util.c
tests/extit_bool_t/: test_bool.c
tests/extit_refcount/: test_refcount.c
tests/iv_bool/: test_iv_bool.c
tests/iv_bool_t/: test_iv_bool.c
tests/iv_keymap/: test_keymap.c
tests/iv_map/: test_iv_map.c
tests/iv_matches/: test_iv_matches.c
tests/iv_version/: test_iv_version.c
(+514 files in other folders)
